edited vars for contact page in order to fix light/dark mode

--- a/form.css
+++ b/form.css
@@ -18,7 +18,7 @@ form {
   display: flex;
   flex-direction: column;
   width: 80%;
-  background-color: rgb(231, 237, 248);
+  background-color: var(--form-color);
   padding-inline: 30px;
   padding-block: 10px;
   font-size: large;
@@ -27,6 +27,10 @@ form {
 
 form, fieldset {
   border-radius: 10px;
+}
+
+.show {
+  display: block !important;
 }
 
 .slot {
