--- a/index.css
+++ b/index.css
@@ -2,11 +2,13 @@
   --background-color: #ffffff; /* Light mode background */
   --text-color: #000000;       /* Light mode text color */
   --inline-padding: 5px;
+  --form-color: rgb(231, 237, 248);
 }
 
 [data-theme='dark'] {
   --background-color: #181818; /* Dark mode background */
   --text-color: #ffffff;       /* Dark mode text color */
+  --form-color: rgb(19, 28, 46);
 }
 
 body {
